# hybrid-go-os

./: .gitignore  Dockerfile  MILESTONES.md  MILESTONES_RUST_GO_v2.md  MILESTONES_v2_GoExplicit.md  Makefile  README.md
boot/: limine.conf  linker.ld
docs/: BUILD.md  G2_EXECUTION_BACKLOG.md  GAP_REPORT.md  M10_EXECUTION_BACKLOG.md  M11_EXECUTION_BACKLOG.md  M12_EXECUTION_BACKLOG.md  M13_EXECUTION_BACKLOG.md  M14_EXECUTION_BACKLOG.md  M15_EXECUTION_BACKLOG.md  M15_M20_MULTIPURPOSE_PLAN.md  M16_EXECUTION_BACKLOG.md  M17_EXECUTION_BACKLOG.md  M20_EXECUTION_BACKLOG.md  M21_M34_MATURITY_PARITY_ROADMAP.md  M25_EXECUTION_BACKLOG.md  M26_EXECUTION_BACKLOG.md  M27_EXECUTION_BACKLOG.md  M28_EXECUTION_BACKLOG.md  M31_EXECUTION_BACKLOG.md  M32_EXECUTION_BACKLOG.md  M33_EXECUTION_BACKLOG.md  M35_EXECUTION_BACKLOG.md  M35_M39_GENERAL_PURPOSE_EXPANSION_ROADMAP.md  M36_EXECUTION_BACKLOG.md  M37_EXECUTION_BACKLOG.md  M38_EXECUTION_BACKLOG.md  M39_EXECUTION_BACKLOG.md  M40_EXECUTION_BACKLOG.md  M40_M44_GENERAL_PURPOSE_PARITY_ROADMAP.md  M41_EXECUTION_BACKLOG.md  M42_EXECUTION_BACKLOG.md  M43_EXECUTION_BACKLOG.md  M44_EXECUTION_BACKLOG.md  M45_EXECUTION_BACKLOG.md  M46_EXECUTION_BACKLOG.md  M47_EXECUTION_BACKLOG.md  M48_EXECUTION_BACKLOG.md  M49_EXECUTION_BACKLOG.md  M50_EXECUTION_BACKLOG.md  M51_EXECUTION_BACKLOG.md  (+37 more)
experimental/: README.md
kernel/: README.md  ipc.c  limine.h  (+22 more)
kernel_rs/: Cargo.toml
kernel_rs/.cargo/: config.toml
kernel_rs/src/: arch_x86.rs  lib.rs  memory.rs  net.rs  process.rs  sched.rs  storage.rs  syscall.rs  trap.rs
kernel_rs/src/runtime/: process.rs
(+546 files in other folders)
