[package]
name = "rugo_kernel"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[features]
panic_test = []
pf_test = []
idt_smoke_test = []
sched_test = []
user_hello_test = []
syscall_test = []
user_fault_test = []
ipc_test = []
ipc_badptr_send_test = []
ipc_badptr_svc_test = []
shm_test = []
blk_test = []
fs_test = []
net_test = []
go_test = []

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
